--- a/app/src/main/res/layout/tweets_rv.xml
+++ b/app/src/main/res/layout/tweets_rv.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="70dp"
@@ -8,32 +8,56 @@
         android:id="@+id/user_image" />
 
     <TextView
-        android:layout_width="260dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:id="@+id/tweet"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/user_image"
         android:layout_toEndOf="@+id/user_image" />
 
-    <com.beardedhen.androidbootstrap.BootstrapButtonGroup
+    <ImageButton
+        android:id="@+id/retweet_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
+        android:src="@drawable/ic_retweet_24dp"
+        android:layout_below="@id/tweet"
+        android:layout_alignLeft="@id/tweet"
+        android:background="@null"/>
+
+    <ImageButton
+        android:id="@+id/reply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
+        android:src="@drawable/ic_reply_24dp"
+        android:layout_below="@id/tweet"
+        android:layout_toRightOf="@id/retweet_button"
+        android:background="@null"/>
+
+    <ImageButton
+        android:id="@+id/favorite_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_favorite_24dp"
+        android:layout_below="@id/tweet"
+        android:layout_toRightOf="@id/reply_button"
+        android:background="@null"/>
+
+    <ProgressBar
+        android:id="@+id/replies_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/retweet_button"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
+    <include layout="@layout/replies_view"
+        android:id="@+id/replies"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_toRightOf="@+id/tweet"
-        android:layout_toEndOf="@+id/tweet"
-        android:orientation="vertical">
-
-        <com.beardedhen.androidbootstrap.BootstrapButton
-            android:id="@+id/retweet_button"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:drawableTop="@drawable/ic_retweet_24dp"/>
-
-        <com.beardedhen.androidbootstrap.BootstrapButton
-            android:id="@+id/reply_button"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_below="@+id/retweet_button"
-            android:drawableTop="@drawable/ic_reply_24dp"/>
-
-    </com.beardedhen.androidbootstrap.BootstrapButtonGroup>
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_below="@id/retweet_button"
+        android:layout_alignStart="@id/tweet"
+        android:layout_alignLeft="@id/tweet"/>
 </RelativeLayout>
