--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#64B5F6</color>
-    <color name="colorPrimaryDark">#263238</color>
-    <color name="colorAccent">#F44336</color>
+    <color name="colorPrimary">#304ffe</color>
+    <color name="colorPrimaryDark">#273ebd</color>
+    <color name="colorAccent">#a4b2ff</color>
 </resources>
