--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar_profile"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorToolbar"
         android:elevation="4dp">
 
         <android.support.v7.widget.ActionMenuView
@@ -58,7 +58,8 @@
         android:id="@+id/refresh_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/avatar">
+        android:layout_below="@id/avatar"
+        android:background="@drawable/gradient_background">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/timeline_recycler_view"
